--- a/contacte.html
+++ b/contacte.html
@@ -18,7 +18,7 @@
 
 
     <div class="formulario">
-        <form action="contacto" >
+        <form action="votacio.php" name="votacio" id="votacio">
 <p>Contacte</p>
 Nom <input type="text" placeholder="Nom" name="nom" id="nom"> Cognoms <input type="text" placeholder="Cognoms" name="cognoms" id="cognoms">
 <br>
