--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <a href="index.html"><h1>Premis GOYA</h1></a> 
     </header>
     <nav>
-        <a href="index.html">Edicions anteriors - </a> <a href="index.html">Nominats - </a> <a href="contacte.html">Contacte</a>
+        <a href="index.html">Edicions anteriors</a> - <a href="index.html">Nominats</a> - <a href="contacte.html">Contacte</a>
     </nav>
 <div class="edicions">
     <h2>Edicions anteriors</h2>
